02-infra/wave-00-secrets.yaml/00-eso/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets-operator
  annotations:
    argocd.argoproj.io/sync-wave: "0"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec: {}
